test/error/parser/struct-field-default-missing-colon.dsk
struct S
    x = (test)
end
